# rust-qrcode-canister

./: Cargo.toml  README.md  dfx.json
src/qr_backend/: Cargo.toml  qr_backend.did
src/qr_backend/src/: core.rs  lib.rs
